# progressing

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: default_bar.rs  different_bars.rs  loops.rs  mapping_bar.rs  simple.rs
scripts/: test.bash
src/: bars.rs  bernoulli.rs  clamping.rs  lib.rs  mapping.rs  timing.rs
src/bars/: bernoulli.rs  clamping.rs  mapping.rs  mapping_bar.rs  mod.rs  timed.rs
tests/examples/: mod.rs
